--- a/EntityFramework_CodeFirst_Drinks/MainWindow.xaml
+++ b/EntityFramework_CodeFirst_Drinks/MainWindow.xaml
@@ -48,13 +48,13 @@
 
 
 
-        <TextBox Name="DrinkName" BorderBrush="Black" BorderThickness="2" TextAlignment="Center" FontSize="13" Grid.Row="1" Grid.Column="1" Grid.RowSpan="1" Grid.ColumnSpan="2"></TextBox>
+        <TextBox Name="TextBoxDrinkName" BorderBrush="Black" BorderThickness="2" TextAlignment="Center" FontSize="13" Grid.Row="1" Grid.Column="1" Grid.RowSpan="1" Grid.ColumnSpan="2"></TextBox>
         <Button Name="BtnClear" BorderBrush="Black" BorderThickness="2" FontSize="13" Click="BtnClear_Click"  Grid.Row="2" Grid.Column="1" Grid.RowSpan="1" Grid.ColumnSpan="1">Clear all</Button>
 
 
         <TextBox Name="BtnSearchInput" BorderBrush="Black" BorderThickness="2" TextAlignment="Center" FontSize="13" Grid.Row="11" Grid.Column="1" Grid.RowSpan="1" Grid.ColumnSpan="2" KeyUp="BtnSearchInput_KeyUp"></TextBox>
         <!-- LISTVIEW -->
-        <ListView   Name="DrinkNameList" BorderThickness="2" FontSize="13" Grid.Row="12" Grid.Column="1" Grid.RowSpan="5" Grid.ColumnSpan="2">
+        <ListView Name="ListViewDrinkNames" BorderThickness="2" FontSize="13" Grid.Row="12" Grid.Column="1" Grid.RowSpan="5" Grid.ColumnSpan="2">
 
             <ListView.Resources>
                 <DataTemplate x:Key="Template">
@@ -80,16 +80,16 @@
 
         </ListView>
 
-        <ComboBox Name="GlassList" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="2" FontSize="13" Grid.Row="1" Grid.Column="10" Grid.RowSpan="1" Grid.ColumnSpan="1"></ComboBox>
+        <ComboBox Name="ComboBoxGlassList" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="2" FontSize="13" Grid.Row="1" Grid.Column="10" Grid.RowSpan="1" Grid.ColumnSpan="2"></ComboBox>
         
-        <TextBox Name="Amount" BorderBrush="Black" BorderThickness="2" TextAlignment="Center" FontSize="13" Grid.Row="6" Grid.Column="4" Grid.RowSpan="1" Grid.ColumnSpan="1"></TextBox>
-        <ComboBox Name="UnitList" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="2" FontSize="13" Grid.Row="6" Grid.Column="5" Grid.RowSpan="1" Grid.ColumnSpan="1"></ComboBox>
-        <ComboBox Name="IngredientList" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="2" FontSize="13" Grid.Row="6" Grid.Column="6" Grid.RowSpan="1" Grid.ColumnSpan="1"></ComboBox>
-        <TextBox Name="Comment" BorderBrush="Black" BorderThickness="2" TextAlignment="Center" FontSize="13" Grid.Row="6" Grid.Column="7" Grid.RowSpan="1" Grid.ColumnSpan="2"></TextBox>
+        <TextBox Name="TextBoxAmount" BorderBrush="Black" BorderThickness="2" TextAlignment="Center" FontSize="13" Grid.Row="6" Grid.Column="3" Grid.RowSpan="1" Grid.ColumnSpan="1"></TextBox>
+        <ComboBox Name="ComboBoxUnitList" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="2" FontSize="13" Grid.Row="6" Grid.Column="4" Grid.RowSpan="1" Grid.ColumnSpan="2"></ComboBox>
+        <ComboBox Name="ComboBoxIngredientList" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="2" FontSize="13" Grid.Row="6" Grid.Column="6" Grid.RowSpan="1" Grid.ColumnSpan="2"></ComboBox>
+        <TextBox Name="TextBoxComment" BorderBrush="Black" BorderThickness="2" TextAlignment="Center" FontSize="13" Grid.Row="6" Grid.Column="8" Grid.RowSpan="1" Grid.ColumnSpan="1"></TextBox>
         <Button Name="BtnAddIngredient" BorderBrush="Black" BorderThickness="2" FontSize="13" Click="BtnClear_Click"  Grid.Row="6" Grid.Column="9" Grid.RowSpan="1" Grid.ColumnSpan="1">Add</Button>
 
 
-        <ListView Name="IngredientsList" BorderThickness="2" FontSize="13" Grid.Row="0" Grid.Column="4" Grid.RowSpan="5" Grid.ColumnSpan="5">
+        <ListView Name="ListViewProcedureList" BorderThickness="2" FontSize="13" Grid.Row="0" Grid.Column="4" Grid.RowSpan="5" Grid.ColumnSpan="5">
 
             <ListView.Resources>
                 <DataTemplate x:Key="Template">
@@ -109,10 +109,10 @@
 
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="" Width="150" DisplayMemberBinding="{Binding Column1}" HeaderContainerStyle="{StaticResource HeaderStyle}"></GridViewColumn>
-                    <GridViewColumn Header="" Width="150" DisplayMemberBinding="{Binding Column2}" HeaderContainerStyle="{StaticResource HeaderStyle}"></GridViewColumn>
-                    <GridViewColumn Header="" Width="150" DisplayMemberBinding="{Binding Column3}" HeaderContainerStyle="{StaticResource HeaderStyle}"></GridViewColumn>
-                    <GridViewColumn Header="" Width="150" DisplayMemberBinding="{Binding Column4}" HeaderContainerStyle="{StaticResource HeaderStyle}"></GridViewColumn>
+                    <GridViewColumn Header="" Width="50" DisplayMemberBinding="{Binding Column1}" HeaderContainerStyle="{StaticResource HeaderStyle}"></GridViewColumn>
+                    <GridViewColumn Header="" Width="70" DisplayMemberBinding="{Binding Column2}" HeaderContainerStyle="{StaticResource HeaderStyle}"></GridViewColumn>
+                    <GridViewColumn Header="" Width="70" DisplayMemberBinding="{Binding Column3}" HeaderContainerStyle="{StaticResource HeaderStyle}"></GridViewColumn>
+                    <GridViewColumn Header="" Width="70" DisplayMemberBinding="{Binding Column4}" HeaderContainerStyle="{StaticResource HeaderStyle}"></GridViewColumn>
                 </GridView>
             </ListView.View>
 
