--- a/EntityFramework_CodeFirst_Drinks/MainWindow.xaml
+++ b/EntityFramework_CodeFirst_Drinks/MainWindow.xaml
@@ -86,7 +86,7 @@
         <ComboBox Name="ComboBoxUnitList" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="2" FontSize="13" Grid.Row="6" Grid.Column="4" Grid.RowSpan="1" Grid.ColumnSpan="2"></ComboBox>
         <ComboBox Name="ComboBoxIngredientList" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="2" FontSize="13" Grid.Row="6" Grid.Column="6" Grid.RowSpan="1" Grid.ColumnSpan="2"></ComboBox>
         <TextBox Name="TextBoxComment" BorderBrush="Black" BorderThickness="2" TextAlignment="Center" FontSize="13" Grid.Row="6" Grid.Column="8" Grid.RowSpan="1" Grid.ColumnSpan="1"></TextBox>
-        <Button Name="BtnAddIngredient" BorderBrush="Black" BorderThickness="2" FontSize="13" Click="BtnClear_Click"  Grid.Row="6" Grid.Column="9" Grid.RowSpan="1" Grid.ColumnSpan="1">Add</Button>
+        <Button Name="BtnAddIngredient" BorderBrush="Black" BorderThickness="2" FontSize="13" Grid.Row="6" Grid.Column="9" Grid.RowSpan="1" Grid.ColumnSpan="1" Click="BtnAddIngredient_Click">Add</Button>
 
 
         <ListView Name="ListViewProcedureList" BorderThickness="2" FontSize="13" Grid.Row="0" Grid.Column="4" Grid.RowSpan="5" Grid.ColumnSpan="5">
